--- a/Jott.html
+++ b/Jott.html
@@ -1,9 +1,11 @@
 <head>
     <title>Jott</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" sizes="16x16 32x32" href="/favicon.ico?v=2">
 </head>
 
 <body>
+    <link rel="icon" sizes="16x16 32x32" href="/favicon.ico?v=2">
     <div id="a" class="container">
         <div id="b" class="starter-template">
             <div id="header">
